tests/fail/destruct_named_asymmetry_fail.stderr
error[E04522]: Mismatched morphology in named destructuring: left-hand variable '&s' has morphology 'reference (&)', but right-hand field 'v1' has morphology 'plain value (None)'. Under Hat Rule, they must be perfectly symmetric (e.g. &s = .&v1).
 --> tests/fail/destruct_named_asymmetry_fail.tk:9:36
   |
 9 |     auto Pair(a = .v0, &s = .v1) = t
   |                                    ^
